@@ -1,0 +1,7 @@
+# This file was generated by Rcpp::compileAttributes
+# Generator token: 10BE3573-1514-4C36-9D1C-5A225CD40393
+
+peakOrder <- function(schrom, sleft, sright) {
+    .Call('DiffBind_peakOrder', PACKAGE = 'DiffBind', schrom, sleft, sright)
+}
+
