@@ -1,0 +1,20 @@
+// This file was generated by Rcpp::compileAttributes
+// Generator token: 10BE3573-1514-4C36-9D1C-5A225CD40393
+
+#include <Rcpp.h>
+
+using namespace Rcpp;
+
+// peakOrder
+Rcpp::RObject peakOrder(SEXP schrom, SEXP sleft, SEXP sright);
+RcppExport SEXP DiffBind_peakOrder(SEXP schromSEXP, SEXP sleftSEXP, SEXP srightSEXP) {
+BEGIN_RCPP
+    Rcpp::RObject __result;
+    Rcpp::RNGScope __rngScope;
+    Rcpp::traits::input_parameter< SEXP >::type schrom(schromSEXP);
+    Rcpp::traits::input_parameter< SEXP >::type sleft(sleftSEXP);
+    Rcpp::traits::input_parameter< SEXP >::type sright(srightSEXP);
+    __result = Rcpp::wrap(peakOrder(schrom, sleft, sright));
+    return __result;
+END_RCPP
+}
