@@ -1,0 +1,4 @@
+library(testthat)
+library(DiffBind)
+
+test_check("DiffBind")
